--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
+altgraph==0.16.1
+astroid==2.2.5
+colorama==0.4.1
+enum-compat==0.0.2
+et-xmlfile==1.0.1
+future==0.17.1
+isort==4.3.21
+jdcal==1.4.1
+lazy-object-proxy==1.4.1
 libesedb-python==20181229
-openpyxl==2.5.14
-python-registry==1.0.4
-impacket==0.9.19.dev0
-
+mccabe==0.6.1
+openpyxl==2.6.2
+PySimpleGUI==4.1.0
+python-registry==1.3.1
+pywin32-ctypes==0.2.0
+six==1.12.0
+typed-ast==1.4.0
+unicodecsv==0.14.1
+wrapt==1.11.2
