--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-
-libesedb-python==20181229
-openpyxl>=2.6.2
-pefile>=2019.4.18
-PySimpleGUI>=4.11.0
-python-registry>=1.3.1
-pywin32-ctypes>=0.2.0
-six>=1.12.0
+openpyxl==3.1.5
+dissect.esedb==3.15
+python-registry==1.3.1
+pywin32==310
+PyYAML==6.0.2
+srum-dump/libesedb_python-20240420-cp312-cp312-win_amd64.whl
