--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ srum-dump/srudb.INTEG.RAW
 srum-dump/.vscode/launch.json
 srum-dump/__pycache__/
 srudb.INTEG.RAW
+srum-dump/build/
+srum-dump/dist/
+srum_dump.spec
